--- a/app/src/main/res/layout/item_album.xml
+++ b/app/src/main/res/layout/item_album.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
@@ -7,13 +8,13 @@
 
     <ImageView
         android:id="@+id/pic_genre"
-        android:layout_width="@dimen/genre_view_size"
-        android:layout_height="@dimen/genre_view_size"
+        android:layout_width="@dimen/album_pic_size"
+        android:layout_height="@dimen/album_pic_size"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/txt_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@drawable/cover" />
 
     <TextView
         android:id="@+id/txt_title"
@@ -21,17 +22,21 @@
         android:layout_height="wrap_content"
         android:breakStrategy="simple"
         android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@id/txt_author"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="Кризис пивного возраста" />
+
+    <TextView
+        android:id="@+id/txt_author"
+        style="@style/DescriptionText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:breakStrategy="simple"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:text="Супчик-рок имени Беркова" />
+        tools:text="Клуб любителей матлогики" />
 
-    <ImageView
-        android:id="@+id/pic_is_picked"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="72dp"
-        app:layout_constraintBottom_toBottomOf="@+id/pic_genre"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_pick" />
 </androidx.constraintlayout.widget.ConstraintLayout>
