--- a/app/src/main/res/values/typography.xml
+++ b/app/src/main/res/values/typography.xml
@@ -10,4 +10,8 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="Body2" parent="Widget.MaterialComponents.TextView">
+        <item name="android:textSize">16sp</item>
+    </style>
+
 </resources>
