--- a/app/src/main/res/layout/fragment_music.xml
+++ b/app/src/main/res/layout/fragment_music.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.musicFeature.MusicFragment">
+    tools:context=".ui.musicFeature.music.MusicFragment">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
