--- a/app/src/main/res/layout/fragment_search_music.xml
+++ b/app/src/main/res/layout/fragment_search_music.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.musicFeature.SearchMusicFragment">
+    tools:context=".ui.musicFeature.music.SearchMusicFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         app:navigationIcon="@drawable/ic_back"
