--- a/app/src/main/res/layout/fragment_upload_track.xml
+++ b/app/src/main/res/layout/fragment_upload_track.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.musicFeature.track.UploadTrackFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
-        app:navigationIcon="@drawable/ic_back"
+        app:navigationIcon="@drawable/ic_close"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,10 +16,30 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="@string/uplo"
+        app:title="@string/upload_track"
+        app:menu="@menu/menu_confirm"
         />
 
+    <ImageView
+        android:id="@+id/pic_album"
+        android:layout_width="@dimen/album_pic_size"
+        android:layout_height="@dimen/album_pic_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        android:scaleType="centerCrop"
+        tools:src="@tools:sample/avatars" />
 
+    <EditText
+        android:id="@+id/edit_text_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="8dp"
+        android:hint="@string/title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pic_album" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
