--- a/app/src/main/res/menu/menu_confirm.xml
+++ b/app/src/main/res/menu/menu_confirm.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/close"
-        android:icon="@drawable/ic_close"
-        android:title="close" />
+        android:icon="@drawable/ic_pick"
+        android:title="close"
+        app:showAsAction="always" />
 </menu>
