--- a/app/src/main/res/layout/fragment_upload_album.xml
+++ b/app/src/main/res/layout/fragment_upload_album.xml
@@ -51,38 +51,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_text_title" />
 
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/group_upload"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:constraint_referenced_ids="btn_upload,txt_upload" />
-
-    <ImageView
-        android:id="@+id/btn_upload"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/btn_upload_track"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:src="@drawable/ic_upload"
+        android:layout_marginEnd="16dp"
+        android:text="@string/upload_track"
+        app:icon="@drawable/ic_upload"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/hdr" />
-
-    <TextView
-        android:id="@+id/txt_upload"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="@string/upload_track"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_upload"
-        app:layout_constraintStart_toEndOf="@+id/btn_upload"
-        app:layout_constraintTop_toTopOf="@+id/btn_upload" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_tracks"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_upload"
+        app:layout_constraintTop_toBottomOf="@+id/btn_upload_track"
         tools:itemCount="5"
         tools:listitem="@layout/item_uploading_track" />
 
