--- a/app/src/main/res/layout/item_album_track.xml
+++ b/app/src/main/res/layout/item_album_track.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
-        android:id="@+id/song_name_txt"
+        android:id="@+id/txt_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -23,7 +23,7 @@
         android:layout_marginStart="8dp"
         android:text="Author"
         app:layout_constraintStart_toEndOf="@+id/txt_number"
-        app:layout_constraintTop_toBottomOf="@+id/song_name_txt" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_title" />
 
     <TextView
         android:id="@+id/txt_number"
@@ -32,7 +32,7 @@
         android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/song_artist_txt"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/song_name_txt"
+        app:layout_constraintTop_toTopOf="@+id/txt_title"
         tools:text="1" />
 
     <TextView
