--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
-        android:id="@+id/song_name_txt"
+        android:id="@+id/txt_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -23,19 +23,18 @@
         android:layout_marginStart="8dp"
         android:text="Author"
         app:layout_constraintStart_toEndOf="@+id/cover_img_s"
-        app:layout_constraintTop_toBottomOf="@+id/song_name_txt" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_title" />
 
     <ImageView
         android:id="@+id/cover_img_s"
         android:layout_width="@dimen/song_cover_size"
         android:layout_height="@dimen/song_cover_size"
-        android:layout_marginStart="4dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        android:layout_marginBottom="6dp"
-        android:layout_marginTop="6dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
@@ -53,7 +52,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginEnd="16dp"
         android:layout_weight="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
