--- a/app/src/main/res/layout/fragment_genres.xml
+++ b/app/src/main/res/layout/fragment_genres.xml
@@ -42,13 +42,13 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/btn_next"
+        android:id="@+id/btn_sign_up"
         style="@style/DefaultButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="@dimen/button_margin_bottom"
-        android:text="@string/next"
+        android:text="@string/sign_up"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
