--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,7 +10,7 @@
         android:icon="@drawable/ic_user_search"
         android:title="@string/search" />
     <item
-        android:id="@+id/musicFragment"
+        android:id="@+id/myMusicFragment"
         android:icon="@drawable/ic_library"
         android:title="@string/library" />
     <item
