--- a/app/src/main/res/layout/item_album_track.xml
+++ b/app/src/main/res/layout/item_album_track.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/song_artist_txt"
+        android:id="@+id/txt_author"
         style="@style/DescriptionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,23 +30,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/song_artist_txt"
+        app:layout_constraintBottom_toBottomOf="@+id/txt_author"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/txt_title"
         tools:text="1" />
 
     <TextView
-        android:id="@+id/duration_txt"
+        android:id="@+id/txt_duration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:text="0:00"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/option_btn"
+        app:layout_constraintEnd_toStartOf="@+id/btn_options"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/option_btn"
+        android:id="@+id/btn_options"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
