--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -12,43 +12,45 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Name"
-        app:layout_constraintStart_toEndOf="@+id/cover_img_s"
+        app:layout_constraintStart_toEndOf="@+id/pic_cover"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/song_artist_txt"
+        android:id="@+id/txt_author"
         style="@style/DescriptionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="Author"
-        app:layout_constraintStart_toEndOf="@+id/cover_img_s"
+        app:layout_constraintStart_toEndOf="@+id/pic_cover"
         app:layout_constraintTop_toBottomOf="@+id/txt_title" />
 
     <ImageView
-        android:id="@+id/cover_img_s"
+        android:id="@+id/pic_cover"
         android:layout_width="@dimen/song_cover_size"
         android:layout_height="@dimen/song_cover_size"
+        android:scaleType="centerCrop"
         android:layout_marginTop="6dp"
         android:layout_marginBottom="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
+        android:src="@drawable/cover"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/duration_txt"
+        android:id="@+id/txt_duration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:text="0:00"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/option_btn"
+        app:layout_constraintEnd_toStartOf="@+id/btn_options"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/option_btn"
+        android:id="@+id/btn_options"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
