--- a/app/src/main/res/layout/fragment_email.xml
+++ b/app/src/main/res/layout/fragment_email.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.signUpFeature.EmailFragment">
+    tools:context=".ui.signUpFeature.email.EmailFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
