--- a/app/src/main/res/layout/dialog_confirm_email.xml
+++ b/app/src/main/res/layout/dialog_confirm_email.xml
@@ -18,7 +18,7 @@
 
     <TextView
         android:layout_marginTop="8dp"
-        android:id="@+id/textView3"
+        android:id="@+id/txt_author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/waiting_for_confirmation" />
