--- a/app/src/main/res/layout/fragment_upload_track.xml
+++ b/app/src/main/res/layout/fragment_upload_track.xml
@@ -17,18 +17,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:title="@string/upload_track"
-        app:menu="@menu/menu_confirm"
         />
 
     <ImageView
-        android:id="@+id/pic_album"
+        android:id="@+id/pic_cover"
         android:layout_width="@dimen/album_pic_size"
         android:layout_height="@dimen/album_pic_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         android:scaleType="centerCrop"
-        tools:src="@tools:sample/avatars" />
+        android:src="@drawable/ic_insert_photo" />
 
     <EditText
         android:id="@+id/edit_text_title"
@@ -39,7 +38,33 @@
         android:hint="@string/title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pic_album" />
+        app:layout_constraintTop_toBottomOf="@+id/pic_cover" />
 
+    <Button
+        android:id="@+id/btn_pick_file"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/pick_audio_file"
+        app:icon="@drawable/ic_upload"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_text_title" />
+
+    <Button
+        android:id="@+id/btn_upload"
+        style="@style/DefaultButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/button_margin_bottom"
+        android:layout_marginHorizontal="16dp"
+        android:text="@string/upload_track"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
