--- a/app/src/main/res/layout/fragment_my_music.xml
+++ b/app/src/main/res/layout/fragment_my_music.xml
@@ -111,6 +111,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_upload_track"
             tools:itemCount="6"
+            android:nestedScrollingEnabled="false"
             tools:listitem="@layout/item_track" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
