--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,9 @@
     <dimen name="post_photo_size">300dp</dimen>
     <dimen name="play_btn_size">25dp</dimen>
 
+    <!-- padding  -->
+    <dimen name="album_padding">8dp</dimen>
+
     <dimen name="button_rounding_radius">7dp</dimen>
     <dimen name="default_text_size">18sp</dimen>
     <dimen name="min_button_height">50dp</dimen>
