--- a/app/src/main/res/navigation/nav_app.xml
+++ b/app/src/main/res/navigation/nav_app.xml
@@ -79,6 +79,12 @@
         <action
             android:id="@+id/action_mainFragment_to_uploadAlbumFragment"
             app:destination="@id/uploadAlbumFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_albumFragment"
+            app:destination="@id/albumFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_uploadPostFragment"
+            app:destination="@id/uploadPostFragment" />
     </fragment>
     <fragment
         android:id="@+id/musicPlayerFragment"
@@ -95,4 +101,9 @@
         android:name="com.monke.machnomusic3.ui.musicFeature.album.UploadAlbumFragment"
         android:label="fragment_upload_album"
         tools:layout="@layout/fragment_upload_album" />
+    <fragment
+        android:id="@+id/uploadPostFragment"
+        android:name="com.monke.machnomusic3.ui.userFeature.post.UploadPostFragment"
+        android:label="fragment_upload_post"
+        tools:layout="@layout/fragment_upload_post" />
 </navigation>
