--- a/app/src/main/res/layout/fragment_upload_post.xml
+++ b/app/src/main/res/layout/fragment_upload_post.xml
@@ -79,13 +79,23 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
             android:text="@string/upload_photo"
             app:icon="@drawable/ic_upload"
-            app:layout_constraintTop_toBottomOf="@id/btn_upload_track"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btn_upload_track" />
+
+
+        <Button
+            android:id="@+id/btn_upload_post"
+            style="@style/DefaultButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:text="@string/upload_post"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_upload_photo" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
