--- a/app/src/main/res/layout/fragment_upload_post.xml
+++ b/app/src/main/res/layout/fragment_upload_post.xml
@@ -34,7 +34,7 @@
             app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_photo"
+            android:id="@+id/recycler_images"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -55,7 +55,7 @@
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/recycler_photo"
+            app:layout_constraintTop_toBottomOf="@id/recycler_images"
             tools:itemCount="2"
             tools:listitem="@layout/item_track" />
 
