uplaoding post tracks

--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/pic_profile"
@@ -20,9 +20,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        tools:text="Кудж Кобейн"
         app:layout_constraintStart_toEndOf="@+id/pic_profile"
-        app:layout_constraintTop_toTopOf="@+id/pic_profile" />
+        app:layout_constraintTop_toTopOf="@+id/pic_profile"
+        tools:text="Кудж Кобейн" />
 
     <TextView
         android:id="@+id/txt_login"
@@ -30,19 +30,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        tools:text="kobain"
         app:layout_constraintBaseline_toBaselineOf="@id/txt_name"
-        app:layout_constraintStart_toEndOf="@+id/txt_name" />
+        app:layout_constraintStart_toEndOf="@+id/txt_name"
+        tools:text="kobain" />
 
     <TextView
-        style="@style/DescriptionText"
         android:id="@+id/txt_date"
+        style="@style/DescriptionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        tools:text="Вчера в 19:17"
         app:layout_constraintStart_toEndOf="@+id/pic_profile"
-        app:layout_constraintTop_toBottomOf="@+id/txt_name" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_name"
+        tools:text="Вчера в 19:17" />
 
     <TextView
         android:id="@+id/txt_post"
@@ -76,10 +76,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:nestedScrollingEnabled="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/recycler_images"
-        android:nestedScrollingEnabled="false"
         tools:itemCount="2"
         tools:listitem="@layout/item_track" />
 
